--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,9 +4,22 @@
       { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-        {
-          "src": "/(.*)",
-          "dest": "/index.js"
-        }
+      {
+        "src": "/api/(.*)",
+        "dest": "/index.js"
+      },
+      {
+        "src": "^/static/(.*)",
+        "dest": "/client/static/$1"
+      },
+      {
+         "src": "/(.*)\\.png",
+         "dest": "/client/$1.png"
+       },
+      {
+        "src": "/(.*)",
+        "dest": "/client/index.html"
+      }
+      
     ]
   }
