--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "supervisor": "^0.12.0"
